--- a/Main.css
+++ b/Main.css
@@ -155,7 +155,7 @@ span {
     padding: 10px;
     font-size: 1.1rem;
     outline: 0px;
-    color: #fff;
+    background-color:#131316;
 }
 
 .tweet-input:empty:before {
