--- a/Main.css
+++ b/Main.css
@@ -147,7 +147,7 @@ span {
 .write-a-post {
     padding: 10px;
     grid-template-columns: 40px 1fr;
-    display: grid;
+    display: block;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -156,6 +156,7 @@ span {
     font-size: 1.1rem;
     outline: 0px;
     background-color:#131316;
+    
 }
 
 .tweet-input:empty:before {
@@ -166,8 +167,9 @@ span {
 
 .post {
     width: 100%;
-    height: 300px;
+    height: 50px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    color: white;
 }
 
 .featured {
