--- a/Main.css
+++ b/Main.css
@@ -11,7 +11,7 @@ h1 {
     color: #ffffff;
 }
 
-form {
+.registratieformulier {
     display: flex;
     flex-direction: column;
     gap: 1em;
@@ -33,14 +33,12 @@ form input [type=sumbit] {
     box-sizing: border-box;
 }
 
-
 .homepage {
     padding: 0;
     min-height: 100vh;
     justify-content: center;
     align-items: flex-start;
     display: flex;
-
 }
 
 .avatar {
@@ -156,15 +154,13 @@ span {
     padding: 10px;
     font-size: 1.1rem;
     outline: 0px;
-    background-color:#131316;
-    
+    background-color: #131316;
 }
 
 .tweet-input:empty:before {
     content: attr(data-placeholder);
     color: rgba(255, 255, 255, 0.5);
 }
-
 
 .post {
     width: 100%;
@@ -174,7 +170,6 @@ span {
 }
 
 .featured {
-
     padding: 20px;
     width: 340px;
     display: flex;
@@ -186,7 +181,6 @@ span {
     border-radius: 5%;
 }
 
-
 input {
     height: 38px;
     width: 100%;
@@ -196,10 +190,6 @@ input {
     border-radius: 40px;
     border: 0;
 }
-
-
-
-
 
 .registratie {
     color: #000;
@@ -219,7 +209,6 @@ input {
     text-align: center;
     background: #fff;
     display: block;
-
 }
 
 .alreadysigningin {
@@ -235,4 +224,9 @@ input {
 
 .homeregistratie {
     height: 3674px;
+}
+
+.likebutton {
+    display: inline-block;
+    margin: 5px;
 }
